# rules_nomad

./: LICENSE  MODULE.bazel  README.md
examples/: BUILD.bazel  api.nomad.hcl  batch-node-pool.nomad.hcl  database-volume.nomad.hcl  platform-namespace.nomad.hcl  production-resource-quota.nomad.hcl
nomad/: extensions.bzl  job.bzl  namespace.bzl  node_pool.bzl  resource_quota.bzl  toolchain.bzl  volume.bzl
nomad/private/: runner.bzl  toolchain_repo.bzl
